fix(hero & action call sections): change elements wrapping and padding
The header and contents of hero section are getting
squished when the viewport gets smaller, so the
flex wrapping was adjusted along with the padding
for action box too, preventing elements from touching
the edge in smaller views.

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,8 @@ a, .hero-desc {
 .info-header, 
 .info-images, 
 .info-img, 
-.quotes, 
+.quotes,
+.person, 
 .action, 
 .action-box, 
 .footer {
@@ -54,36 +55,46 @@ a, .hero-desc {
 .hero {
     flex-direction: column;
     align-items: center;
-    padding: 20px 0 100px;
+    padding: 20px 50px 100px;
     gap: 80px;
 }
 
 .hero-header {
-    width: 1000px;
-    justify-content: space-between;
+    /* width: 1000px; */
+    /* flex: 1; */
+    /* justify-content: space-between; */
     align-items: baseline;
+    /* gap: 50px; */
+    flex-wrap: wrap;
 }
 
 .header-logo {
+    flex: 1;
     font-size: 24px;
     color: #F9FAF8;
+    width: 500px;
 }
 
 .header-links {
+    flex: 1;
     list-style: none;
     padding: 0;
     gap: 15px;
+    width: 500px;
+    justify-content: flex-end;
 }
 
 .hero-content {
-    width: 1000px;
-    flex: 1;
+    /* width: 1000px; */
+    /* flex: 1; */
     justify-content: space-between;
     align-items: flex-start;
     gap: 50px;
+    flex-wrap: wrap;
 }
 
 .hero-text {
+    flex: 1;
     flex-direction: column;
     gap: 10px;
     width: 450px;
@@ -96,11 +107,14 @@ a, .hero-desc {
 }
 
 .hero-img {
+    flex: 1;
     background-color: grey;
-    width: 500px;
+    min-width: 500px;
+    min-height: 250px;
     justify-content: center;
     align-items: center;
-    align-self: stretch;
+    /* justify-self: stretch; */
+    /* align-self: stretch; */
     color: white;
 }
 
@@ -163,18 +177,18 @@ a, .hero-desc {
 
 .person {
     width: 760px;
-    text-align: right;
     padding-right: 35px;
     font-weight: bold;
     font-size: 20px;
     color: #1F2937;
+    justify-content: flex-end;
 }
 
 
 /* action call section */
 
 .action {
-    padding: 100px 0 100px;
+    padding: 100px 50px 100px;
     justify-content: center;
     align-items: center;
 }
